# pet

./: .clang-format  .gitmodules  CMakeLists.txt
scripts/: run-cppcheck.py
src/: main.cpp
src/pet/: Context.hpp  Error.hpp  Expression.cpp  Expression.hpp  Location.cpp  Location.hpp  Script.cpp  Script.hpp  Statement.cpp  Statement.hpp
src/pet/parser/: ConstantFolder.cpp  ConstantFolder.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp
src/pet/runtime/: Array.cpp  Array.hpp  Dictionary.cpp  Dictionary.hpp  Function.hpp  Globals.cpp  Globals.hpp  Interpreter.cpp  Interpreter.hpp  Object.hpp  Scope.cpp  Scope.hpp  Value.cpp  Value.hpp
src/toolkit/: Exception.hpp  Macro.hpp  Profiler.hpp  ScopedInvoker.hpp  StringBuilder.hpp  StringJoiner.hpp  StringPool.cpp  StringPool.hpp  StringUtils.cpp  StringUtils.hpp  ToString.hpp  TypeTraits.hpp
tests/: run_tests.py
tests/scripts/: array.pet  boolean.pet  comments.pet  constants_folding.pet  dictionary.pet  function.pet  globals.pet  if.pet  operators.pet  primitives.pet  recursion.pet  scopes.pet  string_escapes.pet  types.pet  while.pet
tests/scripts/benchmarks/: constants_sum.pet  dict_lookup.pet  fibonacci.pet  loop_sum.pet  string_concat.pet  var_lookup.pet
tests/scripts/fails/: call_non_function_fail.pet  const_assignment_fail.pet  const_declaration_fail.pet  float_divide_by_zero_fail.pet  integer_divide_by_zero_fail.pet  integer_overflow_fail.pet  invalid_escape_fail.pet  out_of_range_fail.pet  undefined_var_fail.pet  unterminated_string_fail.pet
